[tool.poetry]
name = "edge-benchmarking-types"
version = "0.1.0"
description = "Type definitions for AgrifoodTEF's Edge Benchmarking Service."
authors = ["Andreas Schliebitz <a.schliebitz@hs-osnabrueck.de>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "edge_benchmarking_types" }]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.8"

[tool.poetry.group.dev.dependencies]
black = "^24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
